--- a/product-list-with-cart/index.html
+++ b/product-list-with-cart/index.html
@@ -3,17 +3,18 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<!-- displays site properly based on user's device -->
+
+		<link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png" />
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;600;700&family=Fraunces:ital,opsz,wght@0,9..144,900;1,9..144,900&family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap"
 			rel="stylesheet" />
 
-		<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
 		<link rel="stylesheet" href="./src/css/index.css" />
-		<title>Frontend Mentor | Time tracking dashboard</title>
+
+		<title>Frontend Mentor | Product list with cart</title>
 	</head>
 	<body>
 		<div id="root"></div>
